<resources>
    <string name="app_name">AssignmentQuanNMPH14304_Networking</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember">Remember?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="agree_to_the_terms_of_service">Agree to the terms of service</string>
    <string name="change_password">Change password</string>
    <string name="retype_password">Retype password</string>
    <string name="home">Home</string>
    <string name="finished">Finished</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_m_a">Welcome to M.A</string>
    <string name="every_friendship_is_different_because_everyone_s_personality_is_different">Every friendship is different because everyone\'s personality is different.</string>
    <string name="add_your_new_todo">Add your new todo</string>
    <string name="personal">Personal</string>
    <string name="finished_list">Finished list</string>
    <string name="general_information">General Information</string>
</resources>